2010-07-05  Till Kamppeter <till.kamppeter@gmail.com>

	* README: Documented new "fingerprint" parameter for the <package>
	  tag. It provides a link to key fingerprint on the web site of the
	  issuer of the driver.

	* xmlschema/driver.xsd: Updated for new "fingerprint" attribute of the
	  <package> tag.

2010-06-24  OpenPrinting Web Server <webmaster@openprinting.org>

	* db/source/printer/HP-OfficeJet_4300.xml:
	  Entries removed from the MySQL database.

2010-06-22  Tim Waugh <twaugh@redhat.com>

	* db/source/driver/PostScript.xml: Added reference to HP Color
	  LaserJet 2605dn.

2010-06-19  OpenPrinting Web Server <webmaster@openprinting.org>

	* db/source/driver/splix.xml:
	  Entries modified in the MySQL database.

2010-06-18  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/foo2qpdl.xml: This driver also supports the Samsung CLP-310.

	* driver/splix.xml: SpliX refuses to print on color printers if no
	  color profiles are installed. Added appropriate notice.

	* printer/Epson-BX305_Series.xml: Corrected model name.

	* printer/Epson-ME_620F_Series.xml,
	  printer/Epson-N10_N11_Series.xml, printer/Epson-TX320F_Series.xml,
	  printer/Epson-TX320_WorkForce320_Series.xml,
	  printer/Epson-TX525FW_Series.xml,
	  printer/Epson-WorkForce_320_Series.xml: Removed printers which
	  are not yet released onm Epson's request.

2010-06-16  OpenPrinting Web Server <webmaster@openprinting.org>

	* db/source/printer/HP-Photosmart_D5460.xml:
	  New entries added to the MySQL database.

2010-06-15  Till Kamppeter <till.kamppeter@gmail.com>

	* printer/HP-LaserJet_1020.xml, printer/Samsung-CLP-310.xml,
	  opt/207.xml, opt/208.xml, opt/209.xml, opt/211.xml, opt/212.xml,
	  opt/213.xml, opt/214.xml, opt/215.xml, opt/216.xml, opt/217.xml,
	  opt/218.xml, opt/219.xml, opt/220.xml, opt/221.xml, opt/222.xml,
	  opt/223.xml, opt/224.xml, opt/225.xml, opt/226.xml, opt/227.xml,
	  opt/228.xml, opt/3.xml, opt/42.xml, opt/43.xml, opt/44.xml,