@@ -13,7 +13,7 @@
     </en>
   </shortdescription>
   <packages>
-    <package scope="general">http://linux.avasys.jp/drivers/lsb/epson-inkjet/stable/RPMS/i486/*escpr*;http://linux.avasys.jp/drivers/lsb/epson-inkjet/stable/RPMS/x86_64/*escpr*;http://linux.avasys.jp/drivers/lsb/epson-inkjet/stable/debian/dists/lsb3.2/main/binary-i386/*escpr*;http://linux.avasys.jp/drivers/lsb/epson-inkjet/stable/debian/dists/lsb3.2/main/binary-amd64/*escpr*</package>
+    <package scope="general" fingerprint="https://linux.avasys.jp/drivers/lsb/epson-inkjet/key/fingerprint">http://linux.avasys.jp/drivers/lsb/epson-inkjet/stable/RPMS/i486/*escpr*;http://linux.avasys.jp/drivers/lsb/epson-inkjet/stable/RPMS/x86_64/*escpr*;http://linux.avasys.jp/drivers/lsb/epson-inkjet/stable/debian/dists/lsb3.2/main/binary-i386/*escpr*;http://linux.avasys.jp/drivers/lsb/epson-inkjet/stable/debian/dists/lsb3.2/main/binary-amd64/*escpr*</package>
   </packages>
   <functionality>
     <maxresx>5760</maxresx>
