@@ -1,53 +1,0 @@
-<printer id="printer/Samsung-CLP-315">
-  <make>Samsung</make>
-  <model>CLP-315</model>
-  <mechanism>
-    <laser />
-    <color />
-    <resolution>
-      <dpi>
-        <x>1200</x>
-        <y>1200</y>
-      </dpi>
-    </resolution>
-    <margins>
-      <general>
-        <unit>mm</unit>
-        <relative />
-        <top>4.23164</top>
-        <left>3.175</left>
-        <right>3.175</right>
-        <bottom>4.23164</bottom>
-      </general>
-    </margins>
-  </mechanism>
-  <url>http://www.samsung.com/Products/PrinterandMultifunction/ColorLaserPrinters/CLP_300NXAA.asp</url>
-  <lang>
-    <proprietary />
-  </lang>
-  <functionality>B</functionality>
-  <driver>splix</driver>
-  <comments>
-    <en>
-
-      The Samsung CLP-315 (USB) and Samsung CLP-315W (Net) are color laser
-      printers with a 2008 street price of $159 USD and $249 USD.
-
-      This printer is compatible with the CLP-300 and is supported by
-      the SpliX and foo2qpdl open software printer drivers. SpliX
-      gives a better color output.&lt;p&gt;
-
-      The CLP-315 is auto-detected as a CLP-310, but do not worry
-      about that automatic printer setups use the PPD files for
-      CLP-310, the two printers are compatible with each
-      other.&lt;p&gt;
-
-      Consumables/Refills: Toner Black (2000 prints) - $54, Toner
-      Yellow (1000 prints) - $45, Toner Magenta (1000 prints) - $45,
-      Toner Cyan (1000 prints) - $45, Waste Toner (5000 prints) - $10,
-      Drum Kit (20000 prints) - $96 Part numbers: CLP-K300A,
-      CLP-Y315A, CLP-M300A, CLP-C300A, CLP-W300A, CLP-R300A&lt;p&gt;
-
-    </en>
-  </comments>
-</printer>
