@@ -1,32 +1,0 @@
-<printer id="printer/Samsung-CLP-610ND">
-  <make>Samsung</make>
-  <model>CLP-610ND</model>
-  <mechanism>
-    <laser />
-    <color />
-    <resolution>
-      <dpi>
-        <x>2400</x>
-        <y>600</y>
-      </dpi>
-    </resolution>
-  </mechanism>
-  <lang>
-    <pcl level="6" />
-    <proprietary />
-  </lang>
-  <functionality>B</functionality>
-  <driver>splix</driver>
-  <comments>
-    <en>
-
-      This printer is a PCL-XL printer, but it is not recommended to
-      use it with a PCL-XL driver like &quot;pxlcolor&quot; due to a firmware
-      bug which causes major color distortions. See &lt;a
-      href=&quot;https://bugs.launchpad.net/bugs/505423&quot;&gt;this bug
-      report&lt;/a&gt;. Use drivers for Samsung's SPL-2 language, like
-      SpliX for example.&lt;p&gt;
-
-    </en>
-  </comments>
-</printer>
