@@ -1,3 +1,15 @@
+2010-07-06  OpenPrinting Web Server <webmaster@openprinting.org>
+
+	* db/source/driver/epson-escpr.xml:
+	  Entries modified in the MySQL database.
+
+	* db/source/printer/Samsung-CLP-300.xml,
+	  db/source/printer/Samsung-CLP-310.xml,
+	  db/source/printer/Samsung-CLP-315.xml,
+	  db/source/printer/Samsung-CLP-610ND.xml,
+	  db/source/printer/Xerox-Phaser_6110.xml:
+	  Entries removed from the MySQL database.
+
 2010-07-05  Till Kamppeter <till.kamppeter@gmail.com>
 
 	* README: Documented new "fingerprint" parameter for the <package>
